@@ -9,6 +9,7 @@ Version 2.2.14
  * Robert Sowada
    - Changed version to 2.2.14
    - Several fixes so that gnubiff compiles with recent versions of gtk
+   - Migrated deprecated GtkOptionMenu to GtkComboBox	
 
 Version 2.2.13		2010-02-07 13:56
  * Robert Sowada
